Printed the character.

--- a/Day-04/05_character_pattern.ipynb
+++ b/Day-04/05_character_pattern.ipynb
@@ -4,67 +4,51 @@
    "cell_type": "markdown",
    "id": "85442d0c-b254-41f8-b80f-b95602fa1ed4",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Code : Character Pattern\n",
+    "\n",
+    "Print the following pattern for the given N number of rows.\n",
+    "\n",
+    "### Pattern for N = 4\n",
+    "    A\n",
+    "    BC\n",
+    "    CDE\n",
+    "    DEFG\n",
+    "\n",
+    "### Input format :\n",
+    "    Integer N (Total no. of rows)\n",
+    "\n",
+    "### Output format :\n",
+    "    Pattern in N lines\n",
+    "\n",
+    "### Constraints\n",
+    "    0 <= N <= 13\n",
+    "\n",
+    "### Sample Input 1:\n",
+    "    5\n",
+    "\n",
+    "### Sample Output 1:\n",
+    "    A\n",
+    "    BC\n",
+    "    CDE\n",
+    "    DEFG\n",
+    "    EFGHI\n",
+    "\n",
+    "### Sample Input 2:\n",
+    "    6\n",
+    "\n",
+    "### Sample Output 2:\n",
+    "    A\n",
+    "    BC\n",
+    "    CDE\n",
+    "    DEFG\n",
+    "    EFGHI\n",
+    "    FGHIJK"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b8be50a-5a26-499b-b1c3-42efd0ea6ba0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "BB\n"
-     ]
-    }
-   ],
-   "source": [
-    "import string\n",
-    "\n",
-    "n = int(input())\n",
-    "upper_case = string.ascii_uppercase[:n]\n",
-    "for i in range(len(upper_case)):\n",
-    "        for j in range(i+1):\n",
-    "            print(upper_case[i], end=\"\")\n",
-    "        print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ed73ac5e-2101-433c-90f9-bba4b60d72ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'G'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chr(65)\n",
-    "\n",
-    "chr(90)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
    "id": "2d3419cc-ecbc-41bf-9c73-52270870607e",
    "metadata": {},
    "outputs": [
@@ -72,38 +56,42 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 6\n"
+      " 5\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "asciiTarget: 70\n",
-      "chr of asciiTarget: F\n"
+      "A\n",
+      "BC\n",
+      "CDE\n",
+      "DEFG\n",
+      "EFGHI\n"
      ]
     }
    ],
    "source": [
+    "import string\n",
+    "\n",
     "n = int(input())\n",
-    "x = ord('A')\n",
-    "asciiTarget = x + n - 1\n",
-    "print(f\"asciiTarget: {asciiTarget}\")\n",
-    "print(f\"chr of asciiTarget: {chr(asciiTarget)}\")\n",
-    "# print(f\"x: {x}\")\n",
+    "upper_case = string.ascii_uppercase[:]\n",
     "\n",
     "\n",
-    "for i in range(1, n+1):\n",
-    "    # print(chr(i))\n",
-    "    for j in range(65, 65+n):\n",
-    "        print(chr(j), end=\"\")\n",
-    "    print()"
+    "for i in range(n):\n",
+    "    phrase = \"\"\n",
+    "    for j in range(i+1):\n",
+    "        if j == 0:\n",
+    "            phrase += upper_case[i]\n",
+    "        else:\n",
+    "            phrase += upper_case[i+j]\n",
+    "    print(phrase)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "209faf44-9d31-4f4f-9b2b-97a8da2842ab",
+   "id": "23bedeb8-bf5c-49e0-a630-06da5ac66af7",
    "metadata": {},
    "outputs": [],
    "source": []
