right angle triangle stars part 2 completed.

--- a/Day-09/02_right_angle_triangle_star.ipynb
+++ b/Day-09/02_right_angle_triangle_star.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0561948b-19a0-4b23-b87d-024ac56c1682",
+   "id": "e33c6bdf-6e74-434e-b436-95e9073e7a4b",
    "metadata": {},
    "source": [
     "## Right Angle Triangle using *\n",
     "\n",
     "Click on the image below to view the video\n",
     "\n",
-    "[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/rUy_Nq9DHTs/0.jpg)](https://www.youtube.com/watch?v=rUy_Nq9DHTs)\n"
+    "[![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/nkoBmTuuUx4/0.jpg)](https://www.youtube.com/watch?v=nkoBmTuuUx4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "78c3f2ee-2585-4b58-ab67-0d1dbd43c147",
+   "execution_count": 16,
+   "id": "b0d5cf03-e152-4dbc-ab02-0598c798025d",
    "metadata": {},
    "outputs": [
     {
@@ -29,27 +29,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "*\n",
-      "**\n",
       "***\n",
-      "****\n",
-      "*****\n"
+      "*****\n",
+      "*******\n"
      ]
     }
    ],
    "source": [
-    "n = int(input())\n",
+    "def right_angle_triangle(n):\n",
+    "    for i in range(1, n + 3, 2):\n",
+    "        for j in range(i):\n",
+    "            print(\"*\", end=\"\")\n",
+    "        print()\n",
     "\n",
-    "for i in range(1, n + 1):\n",
-    "    for j in range(i):\n",
-    "        print(\"*\", end=\"\")\n",
-    "    print()"
+    "if __name__ == \"__main__\":\n",
+    "    n = int(input())\n",
+    "    print()\n",
+    "    right_angle_triangle(n)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9b43e7-0e9d-4f5e-86ab-010e92d0ea8c",
+   "id": "f8ce23e2-5fa4-4c15-bed9-75d6e364f058",
    "metadata": {},
    "outputs": [],
    "source": []
