few test questions solved.

--- a/Day-10_Programming_Expert/12_strings.ipynb
+++ b/Day-10_Programming_Expert/12_strings.ipynb
@@ -675,8 +675,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7cc7a781-9e5a-46ac-adf4-50a177191310",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence:  Varun Kumar\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "There are 2 words in this sentence\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input(\"Enter a sentence: \")\n",
+    "# print(f\"There are {len(n.split(\" \"))} words in this sentence\")\n",
+    "# print(len(n.split()))\n",
+    "print(f\"There are {len(n.split())} words in this sentence\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a1402c4d-bf8f-4b8a-ab0f-4bfbeead7ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"    *\\n   ***\\n  *****\\n *******\\n  *****\\n   ***\\n    *\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6e07302-4d9f-4051-a8fd-29378ffa95b2",
    "metadata": {},
    "outputs": [],
    "source": []
