Programming Expert:- Tuples completed.

--- a/Day-10_Programming_Expert/13_tuples.ipynb
+++ b/Day-10_Programming_Expert/13_tuples.ipynb
@@ -94,12 +94,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "085d1b42-9fb3-4756-940d-c8c08384daec",
+   "cell_type": "markdown",
+   "id": "874f4ed2-aa57-43df-ac17-49f9aa011d4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Tuple negative Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "77f210a2-7f4f-485d-87b4-a4f462ee79b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4, 5, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cb2596f3-957a-4ed9-b482-a3f411faa096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "80109f80-e86e-4123-a80b-4855e7081c7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 5, 4, 3)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,11 +174,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ef692567-7383-406a-ba0d-4becb83eafde",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(t2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,11 +203,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6dcd9678-3648-4269-b074-46faec8b4567",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 4, 5, 3)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "170053da-f5c8-44a9-81bc-1c07e0b58c0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2.count(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,11 +253,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "96383ab3-1449-4e1d-aab3-717d3ca5aaee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2.index(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c1fe8b7a-182d-41b9-a829-9b2a0d7386a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2.index(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,11 +303,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c419bc9c-ada6-4f16-8d45-458cc6b21800",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 in t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2c275e9e-e105-4f22-9332-c979928dc119",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 in t2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,11 +353,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7f43b9c7-c92b-4076-ab1e-c5d5cd0af7cc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t3 = (1, 2, 4, [1, 2], (4, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b6c8ebe6-2529-488a-94a4-ca48ed58b146",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 4, [1, 2], (4, 5))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a51c3ef0-c7a5-4521-aebb-ca63c36279f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is of type <class 'int'>\n",
+      "2 is of type <class 'int'>\n",
+      "4 is of type <class 'int'>\n",
+      "[1, 2] is of type <class 'list'>\n",
+      "(4, 5) is of type <class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in t3:\n",
+    "    print(f\"{i} is of type {type(i)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,11 +415,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0889ab66-9efe-460b-a4fe-09f000aa0ccc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition of t4 and t5 produces (4, 5, 6, 7, 8, 9)\n",
+      "Multiplication of t4 by 2 produces (4, 5, 6, 4, 5, 6)\n",
+      "Multiplication of t5 by 2 produces (7, 8, 9, 7, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t4 = (4, 5, 6)\n",
+    "t5 = (7, 8, 9)\n",
+    "\n",
+    "print(f\"Addition of t4 and t5 produces {t4 + t5}\")\n",
+    "print(f\"Multiplication of t4 by 2 produces {t4 * 2}\")\n",
+    "print(f\"Multiplication of t5 by 2 produces {t5 * 2}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,18 +448,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "550def9b-7104-415d-a8d6-3c5e4410f708",
+   "execution_count": 27,
+   "id": "38413a72-caba-45e8-9b74-c5bceca8f5e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9818fb5d-83a8-4c89-abf1-73b419a9c997",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "## Modifying Tuples"
+    "# something seperated by , is a tupple itself\n",
+    "x = 1, 2, 3, 4\n",
+    "print(x)\n",
+    "print(type(x))"
    ]
   },
   {
