Implemented binary searcch.

--- a/Day-12_Searching_and_Shorting/Binary_search.ipynb
+++ b/Day-12_Searching_and_Shorting/Binary_search.ipynb
@@ -2,35 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "2e1a2d1a-6f2b-4223-b20d-7a9bf1028844",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def binary_search(arr, n):\n",
+    "def binary_search(array, element):\n",
     "    start = 0\n",
-    "    stop = len(arr)-1\n",
-    "    middle = len(arr)//2\n",
-    "    counter = 0\n",
+    "    stop = len(array) - 1\n",
     "    \n",
     "    while start <= stop:\n",
-    "        # print(f\"The area of array is {arr[start: stop]}\")\n",
-    "        # print(counter, end=\"_|_\")\n",
-    "        ## Check the exact middle element\n",
-    "        if arr[middle] == n: \n",
-    "            return f\"The {n} lies at index {middle}\", counter\n",
-    "        # else:\n",
-    "        #     return -1\n",
-    "    \n",
-    "        if arr[middle] > n:\n",
-    "            stop = middle\n",
-    "            middle = stop // 2\n",
-    "            \n",
-    "        if arr[middle] < n:\n",
-    "            start = middle\n",
-    "            middle = (start + stop)//2\n",
-    "            \n",
-    "        counter += 1\n",
+    "        middle = (start + stop) // 2\n",
+    "        if element == array[middle]:\n",
+    "            return middle\n",
+    "        elif element < array[middle]:\n",
+    "            stop = middle -1\n",
+    "        else:\n",
+    "            start = middle + 1\n",
     "    else:\n",
     "        return -1\n",
     "            "
@@ -38,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "7154af3b-824b-4ac9-9c7c-4056392a8b69",
    "metadata": {},
    "outputs": [
@@ -48,7 +36,7 @@
        "[0, 4, 8, 12, 16, 20, 24, 28, 32, 36, 40, 44, 48, 52, 56]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,103 +48,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "2c4712e2-b15b-4919-a405-463ba9a6bab2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 20 lies at index 5\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "main, count = binary_search(arr, 20)\n",
-    "print(main)\n",
-    "print(count)"
+    "binary_search(arr, 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "b08248a9-01b4-4d0b-a351-29197dfa4c39",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 56 lies at index 14\n",
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# last element\n",
-    "main, count = binary_search(arr, 56)\n",
-    "print(main)\n",
-    "print(count)"
+    "binary_search(arr, 56)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "2e24f786-5757-4a8e-bbf6-64057ab9583a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 586 lies at index 293\n",
-      "16\n"
-     ]
+     "data": {
+      "text/plain": [
+       "293"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "afg = [i for i in range(10000) if i % 2 == 0]\n",
-    "main, count = binary_search(afg, 586)\n",
-    "print(main)\n",
-    "print(count)"
+    "binary_search(afg, 586)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "9a46bd3b-402c-4b50-91ca-39a275668186",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 9998 lies at index 4999\n",
-      "12\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4999"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "afg = [i for i in range(10000) if i % 2 == 0]\n",
-    "main, count = binary_search(afg, 9998)\n",
-    "print(main)\n",
-    "print(count)"
+    "binary_search(afg, 9998)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a9efbc6c-dbbb-4fe7-9251-f5ef45d18487",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bff8af87-b16d-4872-ab10-b5c823fa5f9d",
    "metadata": {},
    "outputs": [],
    "source": []
