Binary search question added.

--- a/Day-12_Searching_and_Shorting/binary_search_pdf_first_and_last.ipynb
+++ b/Day-12_Searching_and_Shorting/binary_search_pdf_first_and_last.ipynb
@@ -44,8 +44,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37caaa70-db25-4b80-a780-814d73ca3c44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(arr, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b494e075-0f88-44dd-9e9b-b7fafc0faef1",
    "metadata": {},
    "outputs": [],
    "source": []
