practising the binary search.

--- a/Day-12_Searching_and_Shorting/testing_binary_search.ipynb
+++ b/Day-12_Searching_and_Shorting/testing_binary_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "0e8c9bf4-457b-48e7-9f02-2c92d8441bc7",
    "metadata": {},
    "outputs": [],
@@ -19,35 +19,63 @@
     "            stop = middle - 1\n",
     "        else:\n",
     "            start = middle + 1\n",
+    "    return -1\n",
+    "\n",
+    "def linear_search(arr, num):\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i] == num:\n",
+    "            return i\n",
     "    return -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "47818af0-d628-4959-95b2-b58185babe0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "4948232"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr = [i for i in range(1000) if i % 2 == 0]\n",
-    "binary_search(arr, 101)"
+    "arr = [i for i in range(100000) if i % 2 == 0]\n",
+    "binary_search(arr, 98964)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fe5d612a-208f-44c4-ac70-543e79d8ebb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4948232"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [i for i in range(100000) if i % 2 == 0]\n",
+    "linear_search(arr, 98964)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe5d612a-208f-44c4-ac70-543e79d8ebb2",
+   "id": "6ba06424-e091-4697-b915-37dbc68debc6",
    "metadata": {},
    "outputs": [],
    "source": []
