--- a/Day-13_Coding_Ninja_Test/Feb_2022_01.ipynb
+++ b/Day-13_Coding_Ninja_Test/Feb_2022_01.ipynb
@@ -2,8 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f5583ebb-63af-4a86-8c99-dd456169535c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the start of the range:  1\n",
+      "Enter the end of the range:  3\n",
+      "Guess a number 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You guessed the number in 0 attempts\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c9e054-06a5-4945-9427-25e7b00afbe6",
    "metadata": {},
    "outputs": [],
    "source": []
