--- a/Day-10_Programming_Expert/16_slices.ipynb
+++ b/Day-10_Programming_Expert/16_slices.ipynb
@@ -10,11 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d0fea780-0fd6-4ee3-adf9-1d9fb5ab2bf2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[2, 3, 4, 5, 6]\n",
+      "[3, 4, 5, 6]\n",
+      "[4, 5, 6]\n",
+      "[5, 6]\n",
+      "[6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    print(arr[i:])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,12 +43,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8e714f4-2ebd-4d77-b9dd-ff20b384738d",
+   "cell_type": "markdown",
+   "id": "2baea6c0-f358-4e20-8775-71560d6d73c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- arr[start : stop : step]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,11 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "29ceaa4f-08d4-4807-ba18-38892ef868e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,11 +89,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8b0c811d-23f0-415d-94f0-6927953a068f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arv = arr[2:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a40dfecc-81b9-4235-aa30-64b720dc59b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arv"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,11 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4eeed710-e393-48e1-99da-c2ca77768ddd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,11 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "33a4f7f0-780b-423f-bf53-77102edd28dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ramuK nuraV\n",
+      "Varun\n"
+     ]
+    }
+   ],
+   "source": [
+    "arm = \"Varun Kumar\"\n",
+    "print(arm[::-1])\n",
+    "print(arm[:5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,11 +186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b51de336-1bfa-4492-9443-8b44df505e45",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 8, 7, 6, 5, 4, 3, 2, 1)\n",
+      "(3, 4, 5, 6)\n",
+      "(7, 6, 5, 4, 3, 2, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = (1, 2, 3, 4, 5, 6, 7, 8, 9)\n",
+    "print(tup[::-1])\n",
+    "print(tup[2:6])\n",
+    "print(tup[6::-1])"
+   ]
   },
   {
    "cell_type": "markdown",
