Learning .get() function.

--- a/Day-10_Programming_Expert/17_dictionaries.ipynb
+++ b/Day-10_Programming_Expert/17_dictionaries.ipynb
@@ -738,8 +738,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "c79f58db-532e-4c89-b756-e69609914f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'V': 1, 'a': 2, 'r': 2, 'u': 2, 'n': 1, 'K': 1, 'm': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "charc = {}\n",
+    "string = \"VarunKumar\"\n",
+    "\n",
+    "for char in string:\n",
+    "    charc[char] = charc.get(char, 0) + 1\n",
+    "    \n",
+    "print(charc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "581a4d1a-e07e-4caa-8edb-70478b3166fc",
    "metadata": {},
    "outputs": [],
    "source": []
