--- a/Day-10_Programming_Expert/18_sets.ipynb
+++ b/Day-10_Programming_Expert/18_sets.ipynb
@@ -1,20 +1,124 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2e8a7de9-5ec4-411a-96cb-77e79e5194fe",
+   "metadata": {},
+   "source": [
+    "## set and createing set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6a701a-a65c-4568-8ab6-d8a60c24bbb2",
+   "id": "5a21c117-aa3c-426c-9ff6-3ed416621810",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "320f1e1b-ae95-4403-b58c-9e77cee3181d",
+   "cell_type": "markdown",
+   "id": "76823775-c4ea-4573-aa39-d46b968ccfc4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## .add() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16c925a6-e232-4c26-a801-7e758a978761",
+   "metadata": {},
+   "source": [
+    "## .remove() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e4b7574-ae31-49d4-a06c-2278d835ea57",
+   "metadata": {},
+   "source": [
+    "## .clear() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebdbbcaa-e5a1-40a5-bcc0-263e70c55525",
+   "metadata": {},
+   "source": [
+    "## len() function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4c37cf-f772-443d-ac2c-71e395dfc9b9",
+   "metadata": {},
+   "source": [
+    "## in operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d290b2-847b-4b4b-b919-b25f6d68ed0e",
+   "metadata": {},
+   "source": [
+    "## .union() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ddad22-b13f-4dd3-a629-25abede0e7a4",
+   "metadata": {},
+   "source": [
+    "## .intersection() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8919002c-3e50-4bbc-bfbd-bbed91b50285",
+   "metadata": {},
+   "source": [
+    "## .difference() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e1a1f4d-5662-4694-99d7-ed8feed45440",
+   "metadata": {},
+   "source": [
+    "## .symmetric_difference() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "524d20e0-4ad6-4561-ba94-2e401ef41403",
+   "metadata": {},
+   "source": [
+    "## .update() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e167f66-a19f-4df7-8b7f-d156584158bd",
+   "metadata": {},
+   "source": [
+    "## .difference_update() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f05a6e59-0c71-4ad3-9dda-d1d9a5fa84e3",
+   "metadata": {},
+   "source": [
+    "## .symmetric_difference_update() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd659e32-806d-4ec6-9662-f4d75ab519a9",
+   "metadata": {},
+   "source": [
+    "## subset and superset examples"
+   ]
   },
   {
    "cell_type": "markdown",
