--- a/Day-10_Programming_Expert/18_sets.ipynb
+++ b/Day-10_Programming_Expert/18_sets.ipynb
@@ -10,8 +10,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5a21c117-aa3c-426c-9ff6-3ed416621810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = set()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee511fc8-27b4-4f7b-8556-86ff634202bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -25,11 +44,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4e77e27a-0c92-47c5-8761-e49ad0d9c911",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 6):\n",
+    "    x.add(i)\n",
+    "    \n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fddc41d-5dbe-46a8-b8f5-934d0c83b91e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "16c925a6-e232-4c26-a801-7e758a978761",
    "metadata": {},
    "source": [
     "## .remove() method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f5e682b2-d2b2-4904-83d9-c13c606d2799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.remove(4)\n",
+    "print(x)"
    ]
   },
   {
@@ -39,6 +106,14 @@
    "source": [
     "## .clear() method"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36cec54-d514-436a-895b-adad972c5411",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
